# my_all_project_Documentation

./: .gitignore
Borgo/Borgo-Pumps/: .gitignore  README.md
Borgo/Borgo-Pumps/docs/: README.md
Borgo/Borgo-Pumps/docs/hardware/: README.md
Borgo/Borgo-Pumps/docs/planning/: future_plan.md  mvp_plan.md
Borgo/Borgo-Pumps/firmware/: COMPATIBILITY.md
Borgo/Borgo-Pumps/firmware/Arduino Code/: SouthernWaterMonitor_v4_6_1.ino
Borgo/Borgo-Pumps/firmware/esp32_s3_monitor/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
Borgo/Borgo-Pumps/openspec/: project.md
Personal/: .gitignore
Personal/Borgo-Pumps/: .gitignore  AGENTS.md  COLLABORATION.md  PRODUCT.md
Personal/Borgo-Pumps/docs/: device-registration-plan.md
Personal/Borgo-Pumps/firmware/esp32_s3_monitor/main/: CMakeLists.txt  config_store.c  config_store.h  idf_component.yml  main.c  pump.c  pump.h  rmaker_wrapper.c  rmaker_wrapper.h
Personal/Borgo-Pumps/pcb/: README.md
Personal/CNC/: CNC_Machine_Documentation.html
Personal/Water Monitoring Syetem/: home_automation.html
Personal/Water Monitoring Syetem/idf_code/: CMakeLists.txt  dpdt_switch_task.c  indicator_task.c  indicator_task.h  led_control.c  led_control.h  main.c  pump_control_task.c  pump_control_task.h  rainmaker_task.c  rainmaker_task.h  relay_control.c  relay_control.h  sensor_task.c  sensor_task.h  swm_config.c  swm_config.h  swm_ipc.c  swm_ipc.h  ultrasonic_sensor.c  ultrasonic_sensor.h  wifi_provisioning_task.c  wifi_provisioning_task.h
Personal/Water Monitoring Syetem/idf_code/main/: CMakeLists.txt
(+43 files in other folders)
